<resources>
    <string name="app_name">Assignment3</string>
    <string name="gingle_bells">Gingle bells</string>
    <string name="let_it_snow">Let it snow</string>
    <string name="have_yourself_a_merry_little_christmas_nlet_your_heart_be_light_nfrom_now_on_our_troubles_will_be_out_of_sight">Have yourself a merry little Christmas\nLet your heart be light\nFrom now on, our troubles will be out of sight</string>
    <string name="happy_holidays">Happy Holidays</string>
    <string name="from_magda">From Magda</string>
</resources>
