<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lights"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/smallImage"
        android:layout_width="150dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundImage"
        app:layout_constraintVertical_bias="0.42"
        app:srcCompat="@drawable/bears"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/happyHolidayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/happy_holidays"

        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/smallImage"
        app:layout_constraintEnd_toEndOf="@+id/backgroundImage"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toEndOf="@+id/smallImage"
        app:layout_constraintTop_toBottomOf="@+id/backgroundImage"
        app:layout_constraintVertical_bias="0.342" />

    <TextView
        android:id="@+id/fromMagdaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/from_magda"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/happyHolidayTextView"
        app:layout_constraintTop_toBottomOf="@+id/happyHolidayTextView" />

    <TextView
        android:id="@+id/congratulationMsgTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/have_yourself_a_merry_little_christmas_nlet_your_heart_be_light_nfrom_now_on_our_troubles_will_be_out_of_sight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smallImage" />

    <Button
        android:id="@+id/letItSnowButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#86BDF4"
        android:text="@string/let_it_snow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gingleBellsButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratulationMsgTextView" />

    <Button
        android:id="@+id/gingleBellsButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#86BDF4"
        android:text="@string/gingle_bells"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/letItSnowButton"
        app:layout_constraintTop_toBottomOf="@+id/congratulationMsgTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>